<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="50dp"
    android:padding="20dp"
    tools:context=".RemiderActivity">

    <EditText
        android:id="@+id/editTextTimeToTake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="20dp"
        android:hint="@string/Enter_your_messeage"
        tools:ignore="LabelFor" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="300dp"
        android:layout_height="342dp"
        android:headerBackground="@color/pill_diary_color"
        android:numbersSelectorColor="@color/pill_diary_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/setBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:backgroundTint="@color/pill_diary_color"
            android:layout_marginEnd="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>