<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/pill_diary_color"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="28sp"
                android:background="@drawable/pill"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/time"
                android:backgroundTint="@color/black"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/notes"
                android:backgroundTint="@color/black"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/medName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name_of_Medicine"
                android:textColor="@color/pill_diary_color"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/medCapsule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amount_of_Medicine"
                android:textColor="@color/grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.558" />

            <TextView
                android:id="@+id/medTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/After"
                android:textColor="@color/grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.603" />

            <TextView
                android:id="@+id/medFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Feedback"
                android:textColor="@color/grey"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
